Fix for overlapping link text in drs_item

--- a/app/assets/stylesheets/components/_typography.scss
+++ b/app/assets/stylesheets/components/_typography.scss
@@ -3,37 +3,10 @@
 
 
 h1 {
-  font-size: 48px;
   .hero-unit &{
     margin-bottom: 15px;
     color: $brand-info;
   }
-}
-
-h2 {
-  font-size: 36px;
- 
-}
-
-h3 {
-  font-size: 28px;
- 
-}
-
-h4 {
-  font-size: 24px;
- 
-}
-
-h5 {
-  font-size: 16px;
- 
-}
-
-h6 {
-  font-size: 13px;
- 
-  text-transform: none;
 }
 
 p {
